--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,11 @@ h1, h2
     background-color: #dbdcde;
 }
 
+#portfolio .card-title {
+    color: #1f7798;
+    font-size: 1.2rem;
+}
+
 /*contact section*/
 #contact {
     background-color: white;
@@ -47,13 +52,16 @@ h1, h2
     padding: 5% 7%;
 }
 
+.hover:hover {
+    background-color: #1f7798;
+    color: white;
+}
 
 
 
 
 
 
-
-.form-label, .mt-4 {
+.black-font {
     color: #000000;
 }
