--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
     font-family: "poppins", sans-serif;
     background-color: #a4c2d1;
 }
+
+.sharp-corners, .sharp-corners * {
+    border-radius: 0 !important;
+}
+
 /*headings font and colour*/
 h1, h2 
 {
