add custom button colour and hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,17 @@ body {
     border-radius: 0 !important;
 }
 
+/*buttons*/
+custom-button {
+    background-color: #1f7798;
+    border: #1f7798;
+}
+
+custom-button:hover {
+    background-color: #1d6d8a;
+    border: #1d6d8a;
+}
+
 /*headings font and colour*/
 h1, h2 
 {
